2001-06-28  Havoc Pennington  <hp@pobox.com>

	* gdk-pixdata.c: <string.h>

	* gdk-pixbuf-io.c (get_libdir): fix typo in dll name (aren't we
	also leaking memory here from g_strdup_printf?)

Tue Jun 26 09:48:02 2001  Tim Janik  <timj@gtk.org>

	* Makefile.am (noinst_PROGRAMS): get rid of make-inline-pixbuf

	* gdk-pixbuf-data.[hc]: provide gdk_pixbuf_new_from_stream()
	instead from gdk_pixbuf_new_from_inline().

	* gdk-pixdata.[hc]: auxillary GdkPixdata structure, public
	installed API for applications that need to serialize/deserialize
	on their own (gimp, BEAST).
	
	* gdk-pixbuf/gdk-pixbuf-csource.c: provide publically installed
	program that can dump images in CSource format and Pixbuf
	stream format. supports RLE encoding, MACRO formatting etc...
	invoke with --help.

Mon Jun 25 00:28:11 2001  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am: Actually update timestamps, so rules don't
	constantly run.

2001-06-11  Havoc Pennington  <hp@redhat.com>

	* Makefile.am (stamp-gdk-pixbuf-marshal.c): glib_genmarshal
	already includes top_builddir

2001-06-08  Havoc Pennington  <hp@redhat.com>

	* gdk-pixbuf-loader.c (gdk_pixbuf_loader_load_module): remove
	bogus g_return_if_fail	

	* io-gif.c (gif_get_lzw): if delay time is 0 or smaller than
	likely timeout resolution, set it to an arbitrarily-chosen short
	delay.
	Fixes bug #55953 from warmenhoven@yahoo.com

2001-06-07  Havoc Pennington  <hp@redhat.com>

	* Makefile.am: use Owen's new way of doing stampfiles/generated
	sources

2001-06-07  Havoc Pennington  <hp@redhat.com>

	* Makefile.am (gdk-pixbuf-marshal.c): fix up the glib-genmarshal path

2001-06-05  Havoc Pennington  <hp@redhat.com>

	* test-loaders.c (main): use putenv not setenv, reported by 
	 Armin Theissen

2001-05-08  Havoc Pennington  <hp@redhat.com>

	* gdk-pixbuf-util.c (gdk_pixbuf_add_alpha): docs fixup, 
	and fix behavior to still subst color if the original image 
	had alpha

2001-06-04  Havoc Pennington  <hp@redhat.com>
