@@ -76,7 +76,7 @@ main (int   argc,
   GError *error = NULL;
 
   /* initialize glib/GdkPixbuf */
-  g_type_init (0);
+  g_type_init ();
 
   /* parse args and do fast exits */
   parse_args (&argc, &argv);
